[workspace]
resolver = "2"
members = [
    "crates/monty",
    "crates/monty-cli",
    "crates/monty-python",
    "crates/monty-js",
    "crates/monty-datatest",
    "crates/monty-bench",
    "crates/monty-type-checking",
    "crates/monty-typeshed",
    "crates/fuzz"
]
default-members = ["crates/monty-cli"]

[workspace.package]
edition = "2024"
version = "0.0.17"
rust-version = "1.95"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "A sandboxed, snapshotable Python interpreter written in Rust."
categories = ["compilers", "emulators", "development-tools"]
keywords = ["python", "interpreter", "sandbox", "embedded"]
homepage = "https://github.com/pydantic/monty/"
repository = "https://github.com/pydantic/monty/"
documentation = "https://github.com/pydantic/monty/"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.dependencies]
# ruff, ty and related crates
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_stdlib", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_db = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_db", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d", features = ["serde"] }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff.git", package = "ty_python_semantic", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff.git", package = "ty_module_resolver", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ty_vendored = { git = "https://github.com/astral-sh/ruff.git", package = "ty_vendored", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
# salsa version matches current main of ruff
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "53421c2fff87426fa0bb51cab06632b87646de13", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
# bigint and related crates
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
# others
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
postcard = { version = "1.1", features = ["alloc"] }
sha2 = "0.10"
pretty_assertions = "1.4"
insta = "1.47"

[workspace.lints.rust]
# codspeed cfg is set by codspeed-criterion-compat when running in CodSpeed environment
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)', 'cfg(heap_reader_compile_fail_tests)', 'cfg(heap_reader_compile_fail_test_read_while_ref_alive)', 'cfg(heap_reader_compile_fail_test_dec_ref_while_reading)', 'cfg(heap_reader_compile_fail_test_smuggle_heap_read)', 'cfg(heap_reader_compile_fail_test_double_get_mut)', 'cfg(heap_reader_compile_fail_test_heap_mutation_while_reading)', 'cfg(heap_reader_compile_fail_test_mutation_in_map_closure)', 'cfg(heap_reader_compile_fail_test_smuggle_vm)', 'cfg(heap_reader_compile_fail_test_smuggle_and_swap_reader)'] }

[workspace.lints.rustdoc]
invalid_codeblock_attributes = "allow"

[workspace.lints.clippy]
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
redundant_clone = "warn"
absolute_paths = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
